#199 further improvement to autopositionoing of barnubmers / countnotes
* introduce config parameter apbase
* updated manual

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -158,6 +158,7 @@
     "AnnotationRef": "Ref. Notenbeschriftung",
     "annotations too close [": "Beschriftungen zu dicht beianander [",
     "annotations": "Notenbeschriftungsvorlagen",
+    "apbase": "autom. pos. Basis",
     "autopos": "autom. pos.",
     "bad characters in filename": "Fehlerhafte Zeichen im Filenamen",
     "barnumbers and countnotes": "Taktnummer und Zählmarken",
