#198 WIP Support llustrations
Another step for illustrations

TODO

* it is pretty slow with large illustrations
* no drag & drop
* no opacity (did not work on pdf)
* update manual
* remove new global $image_list

--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -127,8 +127,10 @@
     "edit extra increments": "Extra Vorschub bearbeiten",
     "edit global settings for the current song": "Globale Einstellungen für das Musikstück bearibeten",
     "Edit layout paerameters\nin current extract": "Layout-Parameter bearbeiten\nimaktuellen Auszug",
+    "edit placement of images": "Position von Bildern bearbeiten",
     "Edit presentation of stringanmes": "Darstellung der Saitennamen bearbeiten",
     "Edit printer correction paerameters": "Druckeranpassungen bearbeiten",
+    "edit resources": "Resourcen bearbeiten",
     "edit settings for lyrics\nin current extract": "Einstellungen für Liedtexte bearbeiten\nim aktuellen Auszug",
     "edit settings for sheet annotations\nin current extract": "Einstellungen für Seitenbeschriftung bearbeiten",
     "edit shape of repeat signs": "Darstellung der Wiederholungszeichen bearbeiten",
@@ -178,11 +180,14 @@
     "grid": "Raster",
     "Harp": "Harfennoten",
     "harpnotes only\napplicable to proofread harpnotes": "Zeige nur Unterlegnoten\ngeeignet zur Kontrolle\ndes gesamten Blattes",
+    "height": "Bildhöhe",
     "Help": "Hilfe",
     "Homepage": "Homepage",
     "horizontal position": "horizontale Position (von links nach rechts)",
     "hpos": "horiz. Position",
     "Id": "Identifikationsnummer",
+    "imagename": "Bildname",
+    "images": "Bilder",
     "import abc, xml from local system": "abc oder xml Datei importieren",
     "Import": "Import",
     "in distance": "Abstand der Eingangslinie",
