--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -109,6 +109,7 @@
     "Your remote data source record count has changed, reloading from the first record.": "Die Datenquelle hat sich geändert, lade Daten ab erstem Eintrag neu.",
     "---this-is-the -end": "",
     "": "",
+    "$resources": "$ Resourcen",
     "-": "-",
     "...": "...",
     "0": "0",
@@ -295,7 +296,7 @@
     "hpos": "horiz. Position",
     "Id": "Identifikationsnummer",
     "imagename": "Bildname",
-    "images": "bilder",
+    "images": "Bilder",
     "import abc, xml from local system": "abc oder xml Datei importieren",
     "Import": "Import",
     "in distance": "Abstand der Eingangslinie",
@@ -512,6 +513,7 @@
     "Tune": "Noten",
     "tuplet": "Tuplet",
     "Unsupported browser. Please use one of ": "Ungeigneter Browser. Bitte benutze einen der folgenden Browser: ",
+    "unsupported section found in abc file: ": "Zupfnoter-Abschnitt in ABC-File nicht unterstützt: ",
     "url": "URL",
     "value": "Wert",
     "Value": "Wert",
