see #202 refined processing of selection end; updated changes and manual

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -37,7 +37,7 @@
     "Delete": "Löschen",
     "Edit Record": "Eintrag bearbeiten",
     "Edit selected record": "Ausgewähltes Element editieren",
-    "Edit": "Editieren",
+    "Edit": "Bearbeiten",
     "Empty list": "Leere Liste",
     "ends with": "endet mit",
     "ends": "endet mit",
@@ -111,6 +111,8 @@
     "": "",
     "$resources": "$ Resourcen",
     "-": "-",
+    "--": "---",
+    "---": "----",
     "...": "...",
     "0": "0",
     "1": "1",
@@ -234,6 +236,7 @@
     "Edit configuration with forms": "Konfiguration in Bildschirmmasken bearbeiten",
     "Edit current extract": "Konfiguration des aktuellen Auszugs bearbeiten",
     "edit extra increments": "Extra Vorschub bearbeiten",
+    "edit functions": "Bearbeitungsfunktionen",
     "edit global settings for the current song": "Globale Einstellungen für das Musikstück bearibeten",
     "Edit layout paerameters\nin current extract": "Layout-Parameter bearbeiten\nimaktuellen Auszug",
     "edit placement of images": "Position von Bildern bearbeiten",
@@ -437,6 +440,8 @@
     "right": "rechts",
     "saitenspiel": "Saitenspiel",
     "Save ABC file in dropbox": "ABC-File in Dropbox speichern",
+    "Select in all voices": "Abschnitt in allen Stimmen auswählen",
+    "select the current notes in all voices": "selektierten Zeitraum in allen Stimmen selektieren",
     "set screen perspective": "Bildschirmansicht wählen",
     "settings for specific instrument sizes": "Instrument spezifischen Einstellungen",
     "shape": "Linienform",
@@ -539,6 +544,7 @@
     "you are not logged in to dropbox": "Du bist nicht bei Dropbox angemeldet",
     "you have multiple %%score statements": "Du hast mehr als eine %%score Zeile",
     "you need to logout if you want to change the application scope": "Du musst dich abmelden um den Zugriffstyp zu ändern",
+    "your cursor is not within a voice": "dein Cursor steht nicht in einer Stimme. Daher kann die Selektion nicht auf andere Stimmen übertragen werden",
     "Zombie Accesstoken revoked; do not use Browser back after login to dropbox": "Zombie Zugriffstoken gelöscht. Bitte drücke nicht die ZURÜCK-Taste des Borwsers nach dem Einloggen in Dropbox.",
     "Zombie token or zombie login occured. Maybe you hit the back button in the browser.": "Zombie Zugriffstoken oder login aufgetreten. Bitte drücke nicht die ZURÜCK-Taste des Borwsers nach dem Einloggen in Dropbox.",
     "zoom harpnote preview": "Zoom in Vorschau der Harfennoten",
