--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -3,6 +3,8 @@
     "": "",
     "$resources": "$ Resourcen",
     "-": "-",
+    "--": "---",
+    "---": "----",
     "...": "...",
     "0": "0",
     "1": "1",
@@ -117,6 +119,7 @@
     "Dropbox": "Dropbox",
     "DURATION_TO_BEAMS": "Notenstile mit Hälsen",
     "DURATION_TO_STYLE": "Notenstile",
+    "Edit": "Bearbeiten",
     "Edit addon on cursor position": "Zusatzinformation bearbeiten",
     "Edit Addon": "Zusatz bearbeiten ",
     "Edit annotations of an extract": "Beschriftung der Auszüge bearbeiten",
@@ -126,6 +129,7 @@
     "Edit configuration with forms": "Konfiguration in Bildschirmmasken bearbeiten",
     "Edit current extract": "Konfiguration des aktuellen Auszugs bearbeiten",
     "edit extra increments": "Extra Vorschub bearbeiten",
+    "edit functions": "Bearbeitungsfunktionen",
     "edit global settings for the current song": "Globale Einstellungen für das Musikstück bearibeten",
     "Edit layout paerameters\nin current extract": "Layout-Parameter bearbeiten\nimaktuellen Auszug",
     "edit placement of images": "Position von Bildern bearbeiten",
@@ -332,6 +336,8 @@
     "saitenspiel": "Saitenspiel",
     "Save ABC file in dropbox": "ABC-File in Dropbox speichern",
     "Save": "Speichern",
+    "Select in all voices": "Abschnitt in allen Stimmen auswählen",
+    "select the current notes in all voices": "selektierten Zeitraum in allen Stimmen selektieren",
     "set screen perspective": "Bildschirmansicht wählen",
     "settings for specific instrument sizes": "Instrument spezifischen Einstellungen",
     "shape": "Linienform",
@@ -435,6 +441,7 @@
     "you are not logged in to dropbox": "Du bist nicht bei Dropbox angemeldet",
     "you have multiple %%score statements": "Du hast mehr als eine %%score Zeile",
     "you need to logout if you want to change the application scope": "Du musst dich abmelden um den Zugriffstyp zu ändern",
+    "your cursor is not within a voice": "dein Cursor steht nicht in einer Stimme. Daher kann die Selektion nicht auf andere Stimmen übertragen werden",
     "Zombie Accesstoken revoked; do not use Browser back after login to dropbox": "Zombie Zugriffstoken gelöscht. Bitte drücke nicht die ZURÜCK-Taste des Borwsers nach dem Einloggen in Dropbox.",
     "Zombie token or zombie login occured. Maybe you hit the back button in the browser.": "Zombie Zugriffstoken oder login aufgetreten. Bitte drücke nicht die ZURÜCK-Taste des Borwsers nach dem Einloggen in Dropbox.",
     "zoom harpnote preview": "Zoom in Vorschau der Harfennoten",
