--- a/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_review.latex
+++ b/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_review.latex
@@ -204,7 +204,7 @@
 
 \hyphenation{Zupf-noter} \hyphenation{Fen-ster}
 
-Version dev/V\_1.8.0\_dev-3-12-g001c8e3
+Version dev/V\_1.8.0\_dev-3-19-gb86c471
 
 \begin{verbatim}
 © 2018 https://www.zupfnoter.de
@@ -2969,7 +2969,7 @@ hineingezogen werden.
   \end{quote}
 
   In dieser Konfigurationsmaske kann man oben im Abschnitt
-  \texttt{\$\ Ressouren} auch sehen, welche Bilder bereits vorhenden
+  \texttt{\$\ Ressourcen} auch sehen, welche Bilder bereits vorhenden
   sind. Durch Klick auf den kleinen Papierkorb kannst du Bilder auch
   wieder aus der Datei entfernen. Klick auf den Hilfe-Button zeigt eine
   kleine Vorschau des Bildes.
@@ -3614,6 +3614,73 @@ mit der Identifikation der Stimme in der \texttt{V:} - Zeile.
 \textbf{Hinweis}: Die ABC-Notation erlaubt mehrere \texttt{\%\%score} -
 Anweisungen. Bitte vermeide das, weil Zupfnoter dafür nicht ausgelegt
 ist und das Verhalten noch nicht ausgetestet ist.
+\end{quote}
+
+\subsubsection{Bearbeiten von Takten in allen
+Stimmen}\label{bearbeiten-von-takten-in-allen-stimmen}
+
+Wenn man im das gesamte Musiktück Takte einfügen bzw. löschen will, ist
+es notwendig, an mehreren Stellen im ABC-Code zu editieren.
+
+Das ist eigentlich der Moment in dem man das Stück in ein
+Notensatzprogramm z.B. Musescore übernimmt, bearbeitet und dann in den
+Zupfnoter zurückbringt.
+
+Zupfnoter kann diesen Anwendungfall auch abdecken:
+
+.
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\item
+  wähle einen Abchnitt in der ersten Stimme
+\item
+  Benutze das Menü ``Bearbeiten / Abschnitt in allen Stimmen auswählen''
+\item
+  Im ABC-Fenster siehst du nun, dass mehrere, nicht zusammen hängende
+  Abschnitte selektiert sind.
+
+  \includegraphics{../ZAUX_Images/040-055_select-multiple-measures.jpg}~
+\item
+  mit der Taste ``Löschen'' kannst du nu die gesamte Auswahl löschen.
+  Damit werden die ausgewählten Takte in allen Stimmen gelöscht.
+\item
+  mit der Taste ``\textless{}-'' (Pfeiltaste nach links) kannst du die
+  Schreibmarke an den Anfang der Auswahl stellen und weitere Takte
+  eingeben.
+
+  \begin{quote}
+  \textbf{Hinweis:} Es ist sinnvoll, hier zunächst Takte mit ganzen
+  Noten einzugeben. Danach lassen sich neuen Takten in den einzelnen
+  Stimmen bearbeiten.
+  \end{quote}
+\end{enumerate}
+
+\begin{quote}
+\textbf{Hinweis:} das Verfahren ist etwas fragil und solte mit
+entsprechender Vorsicht angewandt werden
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  Das Verfahren funktioniert nur, jede Stimme in einem eigenen Block
+  (mit genau einem ``V:'' pro Stimme) angegeben wird.
+\item
+  Das Verfahren basiert auf dem Zeitbezug der Noten. Dabei wird ein
+  Taktstrich der folgenden Note zugeordnet. Wenn also die Auswahl mit
+  einem Taktstich endet, dann wird die folgende Note in die Auswahl mit
+  einbezogen.
+\item
+  Die Grenze der ursprünglichen Auswahl muss in allen Stimmen auch
+  vorhanden sein. Wird z.B. eine \textbf{viertel} Note ausgewählt, in
+  einer anderen Stimme fällt deren Ende aber in eine \textbf{halbe
+  Note}, dann ist die Auswahl in den Stimmen nicht zeitsynchron und es
+  kann zu Fehlern kommen.
+\item
+  Das Verfahren erfordert, dass die Harfennoten aktuell sind (d.h. seit
+  dem letzten Rendern keine Bearbeitung mehr gemacht wurde), d
+\end{enumerate}
 \end{quote}
 
 \subsubsection{Wenn die vertikale Anordnung optimiert werden
