fixed some typos in localization
now we also create a list of unused localizations

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -468,7 +468,7 @@
     "specify details for lyrics": "Einzelheiten für\nDarstellung der\nLiedtexte festlegen",
     "specify full details for stringnams": "Detaillierte Angaben\nzu Saitennamen",
     "specify if rests are shown outside of flowlines": "Darstellung von Pausen,\nin Stimmen ohne Melodielinie\n(Begleitgsimmen)",
-    "specify laoyut details \n(e.g. size of symbols)": "Angabe zu Layout details\nz.B.Größe der Symbole\nLinienstärken",
+    "xxspecify layout details \n(e.g. size of symbols)": "Angabe zu Layout details\nz.B.Größe der Symbole\nLinienstärken",
     "specify output of stringnames.\n Stringnames help to tune the instrument": "Angabe zur Ausgabe von Saitennamen\nSaitennamen helfen\nbeim Stimmen des insrumentes",
     "specify printer adaptations details \n(e.g. offsets)": "Details der Druckeranpassung",
     "specify temmplate for\n note bound annotations": "Vorlage für notengebundene\nBeschriftung erstellen",
