--- a/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_review.latex
+++ b/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_review.latex
@@ -204,7 +204,7 @@
 
 \hyphenation{Zupf-noter} \hyphenation{Fen-ster}
 
-Version dev/V\_1.8.0\_dev-3-19-gb86c471
+Version dev/V\_1.8.0\_dev-3-27-g171dc84
 
 \begin{verbatim}
 © 2018 https://www.zupfnoter.de
@@ -3461,6 +3461,32 @@ is äquivalent zu
 K:G
 GAB
 \end{verbatim}
+
+\subsubsection{wechselnde Taktlängen}\label{wechselnde-taktluxe4ngen}
+
+Es gibt Stück, mit wechslenden Taktlängen. Bei einzelnen Takten kanns du
+dasd mit einer eingebetteten Kopfnzeile machen \texttt{{[}M:3/2{]}}. Bei
+häufigen Taktwechwseln ist das aber recht umständlich. In diesem Fall
+kannst du z.B. die Kopfzeile so angeben:
+
+\begin{verbatim}
+M: 2/2 3/2=2/2
+\end{verbatim}
+
+Damit werden alle im Stück auftretenden Taktlängen angegeben. Nach dem
+Gleichheitszeichen kann die kürzeste Taktlänge angegeben werden. Die
+Notenvorschau schreibt nur dann eine Taktnummer, wenn der Takt
+ausgefüllt ist. Mit der Angabe der kürzesten Taktlänge bekommst du an
+allen Takten eine Nummer.
+
+\subsubsection{Variante Enden mitten im
+Takt}\label{variante-enden-mitten-im-takt}
+
+Wenn eine Variation mitten in einem Takt beginnen soll, dann muss als
+``Taktstrich'' eine rechte eckige Klammer (z.b. \texttt{{]}1} )
+geschrieben werden. Zupfnoter stellt dann weder in der Notenvorschau
+noch in den Unterlegnoten einen Taktstrich dar. Auch die Zählung der
+Takte kommt nicht durcheinander.
 
 \subsubsection{Wenn Takte nicht synchron
 sind}\label{wenn-takte-nicht-synchron-sind}
