--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -46,6 +46,7 @@
     "afterColonN": "afterColonN",
     "afterComma": "afterComma",
     "aligned": "aligned",
+    "all parameters": "Alle Parameter",
     "All": "Alle Fenster",
     "Ambiguous file number": "Dateinummer ist mehrdeutigr",
     "Annotation": "Notenbeschriftung",
@@ -119,9 +120,9 @@
     "Dropbox": "Dropbox",
     "DURATION_TO_BEAMS": "Notenstile mit Hälsen",
     "DURATION_TO_STYLE": "Notenstile",
-    "Edit": "Bearbeiten",
     "Edit addon on cursor position": "Zusatzinformation bearbeiten",
     "Edit Addon": "Zusatz bearbeiten ",
+    "edit all parameters": "Gesamtkonfiguration bearbeiten",
     "Edit annotations of an extract": "Beschriftung der Auszüge bearbeiten",
     "edit barnumbers or countnotes": "Taktnummern und Zählmarken bearbeiten",
     "Edit basic settings of extract": "Grundeinstellungen bearbeiten",
@@ -132,6 +133,7 @@
     "edit functions": "Bearbeitungsfunktionen",
     "edit global settings for the current song": "Globale Einstellungen für das Musikstück bearibeten",
     "Edit layout paerameters\nin current extract": "Layout-Parameter bearbeiten\nimaktuellen Auszug",
+    "edit notebound settings": "Notenbezogene Einstellungen bearbeiten",
     "edit placement of images": "Position von Bildern bearbeiten",
     "Edit presentation of stringanmes": "Darstellung der Saitennamen bearbeiten",
     "Edit printer correction paerameters": "Druckeranpassungen bearbeiten",
@@ -139,6 +141,8 @@
     "edit settings for lyrics\nin current extract": "Einstellungen für Liedtexte bearbeiten\nim aktuellen Auszug",
     "edit settings for sheet annotations\nin current extract": "Einstellungen für Seitenbeschriftung bearbeiten",
     "edit shape of repeat signs": "Darstellung der Wiederholungszeichen bearbeiten",
+    "edit Template properties": "Eigenschaften der Dateivorlage bearbeiten",
+    "Edit": "Bearbeiten",
     "editor and harpnotes\napplicaple to tweak the notes for harp": "Zeige ABC und Harfennoten\ngeeignet zur Feinkorektur\nim Unterlegnotenblatt",
     "editor and notes\napplicable to enter notes": "Zeige ABC und Notendarstellung\ngeeignet zur Eingabe von Noten",
     "Effective value": "aktuell wirksamer Wert",
@@ -163,7 +167,7 @@
     "extract": "Auszug",
     "Extract-Annotation": "Auszugsbeschriftung",
     "File": "Datei",
-    "filebase": "Dateibasis",
+    "filebase": "Filename-Basis",
     "Filename not specified in song add an F: instruction": "Kein Filename angegeben. Bitte füge eine F: - Kopfzeile hinzu",
     "filenamepart": "Filename-Zusatz",
     "Files saved to dropbox": "Dateien in Dropbox gespeichert",
@@ -318,6 +322,7 @@
     "read later": "später lesen",
     "read now": "jetzt lesen",
     "Reference": "Referenz",
+    "Refresh": "Refresh",
     "regular": "normal",
     "Render previews": "Vorschauen neu errechnen",
     "Render": "Rendern",
@@ -364,7 +369,6 @@
     "specify details for lyrics": "Einzelheiten für\nDarstellung der\nLiedtexte festlegen",
     "specify full details for stringnams": "Detaillierte Angaben\nzu Saitennamen",
     "specify if rests are shown outside of flowlines": "Darstellung von Pausen,\nin Stimmen ohne Melodielinie\n(Begleitgsimmen)",
-    "xxspecify layout details \n(e.g. size of symbols)": "Angabe zu Layout details\nz.B.Größe der Symbole\nLinienstärken",
     "specify output of stringnames.\n Stringnames help to tune the instrument": "Angabe zur Ausgabe von Saitennamen\nSaitennamen helfen\nbeim Stimmen des insrumentes",
     "specify printer adaptations details \n(e.g. offsets)": "Details der Druckeranpassung",
     "specify temmplate for\n note bound annotations": "Vorlage für notengebundene\nBeschriftung erstellen",
@@ -380,6 +384,7 @@
     "specify which voices\nshow repeat signs instead of jumplines": "Angabe, welche Stimmen\nWiederholgunszeichen statt\nSprunglinien verwenden",
     "specify which voides\nare considered to compute \nvertical spacing": "Angabe, welche Stimmen\nzur Berechnung\nder vertikalen Notenanordnung\nberücksihtigt werden",
     "spos": "Pos. Subleg.",
+    "standardextract": "Standardauszüge (aus Template)",
     "startpos": "Startposition",
     "Stop": "Stop",
     "stringnames": "Saitennamen",
@@ -391,13 +396,14 @@
     "T01_number": "T01 Nummer",
     "T01_number_extract": "T01 Auszug-Nummer",
     "T01_number_extract_value": "T01 Auszugn Nummer Wert",
+    "T01_T99": "T01 .. T99 Alle ..",
     "T02_copyright_music": "T02 Copyright Musik",
     "T03_copyright_harpnotes": "T03 Copyright Unterlegnoten",
     "T04_to_order": "T04 zu beziehen bei",
     "T05_printed_extracts": "T05 verfügbare Auszüge",
     "T99_do_not_copy": "T99 bitte nicht kopieren",
     "target to jump to": "Sprungziel",
-    "template": "Dateivorlate",
+    "template": "Dateivorlage",
     "templates": "Vorlagen",
     "tempo change not suported by zupfnoter": "Zupfnoter unterstüzt keine Tempoänderungen",
     "Text of annotation": "Text der Notenbeschriftung",
@@ -435,6 +441,7 @@
     "X_OFFSET": "X - Offset",
     "X_SPACING": "Saitenabstand",
     "xx": "xx",
+    "xxspecify layout details \n(e.g. size of symbols)": "Angabe zu Layout details\nz.B.Größe der Symbole\nLinienstärken",
     "Y-position": "Y-position",
     "Y_SCALE": "Vertikale Skalierung",
     "Yes": "Ja",
